<resources>
    <string name="app_name">ExamProject</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kea_bank">KEA BANK</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">REGISTER</string>
    <string name="sign_in">SIGN IN</string>
    <string name="_123">123</string>
    <string name="lars">lars</string>
    <string name="ok">OK</string>
    <string name="_0000">0000</string>
    <string name="person_to_transfer_to">PERSON TO TRANSFER TO</string>
    <string name="value">VALUE</string>
    <string name="key">KEY:</string>
    <string name="_811_123_522">811-123-522</string>
    <string name="nemid">NEMID</string>
    <string name="_0005">0005</string>
</resources>
