<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FrontPageActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/front_page_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/password_input"
            android:layout_width="177dp"
            android:layout_height="35dp"
            android:text="@string/_123"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/button_sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password"
            app:layout_constraintVertical_bias="0.125"
            android:autofillHints="" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="180dp"
            android:layout_height="34dp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="8dp"
            android:text="@string/username"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bank_title"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="181dp"
            android:layout_height="33dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_username"
            app:layout_constraintVertical_bias="0.106" />

        <TextView
            android:id="@+id/bank_title"
            android:layout_width="402dp"
            android:layout_height="52dp"
            android:layout_marginTop="120dp"
            android:text="@string/kea_bank"
            android:textAlignment="center"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_register_front_page"
            android:layout_width="230dp"
            android:layout_height="53dp"
            android:layout_marginBottom="68dp"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_sign_in"
            app:layout_constraintVertical_bias="0.287" />

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="303dp"
            android:layout_height="70dp"
            android:layout_marginTop="168dp"
            android:layout_marginBottom="8dp"
            android:text="@string/sign_in"
            app:layout_constraintBottom_toTopOf="@+id/button_register_front_page"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password"
            app:layout_constraintVertical_bias="0.864" />

        <EditText
            android:id="@+id/username_input"
            android:layout_width="179dp"
            android:layout_height="33dp"
            android:text="@string/lars"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/tv_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_username"
            android:importantForAutofill="no" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/fragment_register_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>