<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NemIdFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tv_nemid_label"
        android:layout_width="149dp"
        android:layout_height="37dp"
        android:layout_marginTop="48dp"
        android:text="@string/nemid"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tv_input_value"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_value"
        app:layout_constraintVertical_bias="0.031" />

    <TextView
        android:id="@+id/tv_show_code"
        android:layout_width="146dp"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        android:text="@string/_811_123_522"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_code" />

    <TextView
        android:id="@+id/tv_code"
        android:layout_width="145dp"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:text="@string/key"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nemid_label" />

    <TextView
        android:id="@+id/tv_value"
        android:layout_width="140dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_show_code" />

    <Button
        android:id="@+id/btn_nem_id_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OK"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.399"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_input_value"
        app:layout_constraintVertical_bias="0.185" />

</android.support.constraint.ConstraintLayout>